--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file-find"></i></div>
-              <h4 class="title"><a href="">Reheasal Tests </a></h4>
+              <h4 class="title"><a href="">Rehearsal tests </a></h4>
               <p class="description"> A model paper similar to the A/L examination every month </p>
             </div>
           </div>
